# jtUI

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md
api/: CMakeLists.txt
api/include/jtui/: jtui.hpp
cmake/: HuiOptions.cmake  HuiWarnings.cmake
cmake/toolchains/: mingw-w64-x86_64.cmake
docs/: api-reference.md  api-reference.zh-CN.md  architecture.md  architecture.zh-CN.md  getting-started.md  getting-started.zh-CN.md
examples/_shared/: about_dialog.hpp
examples/folders_app/: CMakeLists.txt  app_state.hpp  brand_tokens.hpp  i18n_catalog.hpp  main.cpp
examples/gallery/: CMakeLists.txt  gallery_context.hpp  main.cpp
examples/gallery/sections/: audio.cpp  audio.hpp  button_styles.cpp  button_styles.hpp  buttons.cpp  buttons.hpp  gauges.cpp  gauges.hpp  icons.cpp  icons.hpp  inputs.cpp  inputs.hpp  palette.cpp  palette.hpp  video.cpp  video.hpp  vscode_palette.cpp  vscode_palette.hpp
examples/jtui_atlas/: CMakeLists.txt  brand_tokens.hpp  i18n_catalog.hpp  main.cpp
examples/jtui_cinema/: CMakeLists.txt  brand_tokens.hpp  carousel_animator.hpp  i18n_catalog.hpp  main.cpp  thumbnail_art.hpp
examples/jtui_hero/: CMakeLists.txt  brand_tokens.hpp  i18n_catalog.hpp  main.cpp
examples/jtui_invest/: CMakeLists.txt  animated_widgets.hpp  brand_tokens.hpp  i18n_catalog.hpp  main.cpp
examples/jtui_live/: CMakeLists.txt  brand_tokens.hpp  i18n_catalog.hpp  main.cpp
examples/jtui_pro/: CMakeLists.txt  brand_tokens.hpp  generated_bg.hpp  i18n_catalog.hpp  main.cpp
examples/jtui_pulse/: CMakeLists.txt  brand_tokens.hpp  i18n_catalog.hpp  live_chart_bg.hpp  main.cpp
examples/jtui_studio/: CMakeLists.txt  brand_tokens.hpp  i18n_catalog.hpp  main.cpp
ffi/c_api/: CMakeLists.txt
ffi/c_api/include/hui/c_api/: hui.h
ffi/c_api/src/: hui.cpp
platform/: PORTING.md
platform/win32/: CMakeLists.txt
platform/win32/include/hui/platform/win32/: codicon_font_loader.hpp  com_ptr.hpp
platform/win32/src/font/: codicon_font_loader.cpp
platform/win32/src/media/: factory_win32.cpp  mf_decoder.cpp  wasapi_audio.cpp
runtime/app/: CMakeLists.txt
runtime/app/include/hui/app/: application.hpp  component_view.hpp  window.hpp
runtime/app/src/: application.cpp
runtime/event/: CMakeLists.txt
runtime/event/include/hui/event/: dispatcher.hpp  events.hpp
runtime/event/src/: dispatcher.cpp  event.cpp
runtime/foundation/: CMakeLists.txt
runtime/foundation/include/hui/foundation/: codicon_codepoints.hpp  codicon_font.hpp  codicon_lookup.hpp  color.hpp  geometry.hpp  i18n.hpp  image_loader.hpp  log.hpp  pixel_buffer.hpp  result.hpp
runtime/foundation/src/: codicon_lookup.cpp  embedded_codicon_font.cpp  foundation.cpp  i18n.cpp  image_loader.cpp  log.cpp
runtime/layout/: CMakeLists.txt
runtime/layout/include/hui/layout/: layout_types.hpp
runtime/layout/src/: layout.cpp
runtime/media/: CMakeLists.txt
runtime/media/include/hui/media/: decoder.hpp  frame_types.hpp  realtime_source.hpp  texture_handle.hpp
runtime/media/src/: media.cpp  null_decoder.cpp
runtime/object/: CMakeLists.txt
runtime/object/include/hui/object/: dirty_flags.hpp  element.hpp  event.hpp  node.hpp  widget.hpp
runtime/object/src/: object.cpp
runtime/property/: CMakeLists.txt
runtime/property/include/hui/property/: command.hpp  property.hpp  realtime_source.hpp  signal.hpp
runtime/property/src/: property.cpp
runtime/render/: CMakeLists.txt
runtime/render/include/hui/render/: paint_context.hpp
runtime/render/src/: render.cpp
runtime/theme/: CMakeLists.txt
runtime/theme/include/hui/theme/: color_tokens.hpp  elevation_tokens.hpp  radius_tokens.hpp  semantic_colors.hpp  spacing_tokens.hpp  theme.hpp  token_override.hpp  typography_tokens.hpp  vscode_tokens.hpp  vscode_typography.hpp
runtime/theme/src/: theme.cpp  tokens_dark.cpp  tokens_light.cpp  vscode_palette.cpp  vscode_semantic.cpp  vscode_semantic_dark.cpp  vscode_semantic_light.cpp  vscode_typography.cpp
scripts/codicon/: generate_codicon_sources.py
tests/: CMakeLists.txt  unit_tests.cpp
tests/codicon_smoke/: main.cpp
widgets/basic/: CMakeLists.txt
widgets/basic/include/hui/widgets/basic/: flex_box.hpp  icon.hpp  list_view.hpp  panel.hpp  scroll_view.hpp  text.hpp  title_bar.hpp  window_frame.hpp
widgets/basic/src/: basic.cpp  flex_box.cpp
widgets/common/: CMakeLists.txt
widgets/common/include/hui/widgets/common/: about_card.hpp  avatar.hpp  badge.hpp  button.hpp  card.hpp  checkbox.hpp  chip.hpp  dialog.hpp  dropdown.hpp  folder_card.hpp  gauge.hpp  metric_card.hpp  popover.hpp  progress_bar.hpp  radial_gauge.hpp  search_input.hpp  semi_gauge.hpp  sidebar_nav.hpp  slider.hpp  switch.hpp  tabs.hpp  text_input.hpp  toolbar.hpp  tooltip.hpp
widgets/common/src/: button.cpp  common.cpp  dialog.cpp  gauge.cpp  tabs.cpp  text_input.cpp
widgets/media/: CMakeLists.txt
widgets/media/include/hui/widgets/media/: audio_player.hpp  level_meter.hpp  realtime_canvas.hpp  timeline.hpp  video_player.hpp  video_view.hpp  waveform_view.hpp
widgets/media/src/: audio_player.cpp  media.cpp  video_player.cpp
